--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "start": "node build/index.js",
+    "lint": "ts-standart",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,9 +15,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "ts-standard": "^11.0.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "express": "4.17.3"
+  },
+  "eslintConfig":{    
+    "extends": ["./node_modules/ts-standard/eslintrc.json"]
   }
 }
